# simucopter-bridge

./: .gitignore  CMakeLists.txt  create-patch.sh  install.sh  kill-arducopter.sh  main.cpp  run-arducopter-navio.sh  run-arducopter.sh
bridge/: AbstractBridgeCommandHandler.cpp  AbstractBridgeCommandHandler.h  ArgumentPacker.cpp  ArgumentPacker.h  BridgeClient.cpp  BridgeClient.h  BridgeMessage.h  BridgeService.cpp  BridgeService.h  ZmqBridgeMessageSerializer.cpp  ZmqBridgeMessageSerializer.h  simucopter-bridge.h
bridge_test/: TestIntBridgeClientAndService.cpp  TestUnitAbstractBridgeCommandHandler.cpp  TestUnitArgumentPacker.cpp  TestUnitBridgeClient.cpp  TestUnitBridgeMessage.cpp  TestUnitBridgeService.cpp  TestUnitZmqMessageSerializer.cpp
patch/: simucopter.patch
simucopter/: AbstractBridgeCommandHandler.cpp  AbstractBridgeCommandHandler.h  AbstractBridgeRequestHandler.h  ArduCopterCommandHandler.cpp  ArduCopterCommandHandler.h  ArduCopterRequestHandler.cpp  ArduCopterRequestHandler.h  BridgeClient.cpp  BridgeClient.h  BridgeMessage.cpp  BridgeMessage.h  BridgeRequestHandler.h  BridgeService.cpp  BridgeService.h  SimuCopterMessage.h  SimulinkBridgeInterface.h  SitlBridgeInterface.h  SitlRequestHandler.cpp  SitlRequestHandler.h  ZmqBridgeMessageSerializer.cpp  ZmqBridgeMessageSerializer.h  control_simulink.cpp  simucopter-agent.cpp  simucopter-arducopter.cpp  simucopter-arducopter.h  simucopter.h  simucopter_agent.cpp
simucopter-matlab/: Accel.m  BLOCK_TEMPLATE.m  Copter_Self_State.m  Copter_get_control_mode.m  Copter_get_number.m  Copter_set_number.m  Copter_set_pitch.m  Copter_set_roll.m  Copter_set_yaw.m  Copter_throttle_state.m  DemoColorDetector.m  Gyro.m  Motors.m  PilotCmdBlock.m  Pitch_state.m  RC.m  RateController.m  Roll_state.m  SimuCopterToolbox.slx  TEMPLATE.slx  TestFlightMode.slx  TestYaw.slx  Yaw_state.m  camera.slx  camera_backup.slx  check.slx  compass.slx  copter_heading.m  copter_motors_pwm.m  copter_motors_test.slx  gyro_state.slx  set_Motors.slx  sitl.slx  sitlBlocks.slx  sitl_Accel.m  sitl_Accel_test.slx  sitl_Gyro.m  sitl_copter_state.slx  sitl_get_Motors_state.m  sitl_get_height.m  (+2 more)
simucopter-matlab/bridge/: AbstractBridgeCommandHandler.cpp  AbstractBridgeCommandHandler.h  AbstractBridgeRequestHandler.h  ArgumentPacker.h  BridgeClient.cpp  BridgeClient.h  BridgeMessage.cpp  BridgeMessage.h  ZmqBridgeMessageSerializer.cpp  simucopter-bridge.h
simucopter-matlab/bridge/TestFlightMode_ert_rtw/: build_exception.mat
simucopter-matlab/bridge/slprj/ert/TestFlightMode/tmwinternal/: minfo.mat
simucopter-matlab/bridge/slprj/ert/_sharedutils/: shared_file.dmr
simucopter-matlab/simucopter/: ArduCopterCommandHandler.cpp  ArduCopterCommandHandler.h  SimulinkBridgeInterface.cpp  SitlRequestHandler.h  control_simulink.cpp  simucopter-arducopter.cpp  simucopter-arducopter.h  simucopter-sitl.cpp  simucopter-sitl.h  simucopter.c  simucopter.h  simucopter_agent.cpp
simucopter_test/: TestBridgeMessage.cpp  TestIntBridgeClientAndService.cpp  TestUnitAbstractBridgeCommandHandler.cpp  TestUnitBridgeClient.cpp  TestUnitBridgeMessage.cpp  TestUnitBridgeService.cpp  TestUnitZmqMessageSerializer.cpp  test-common.h
